--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
 						<li class="active"><a href="#fh5co-header">Home</a></li>
+						<li class="active"><a href="#fh5co-invitation">Invitation</a></li>
 						<li class="active"><a href="#fh5co-event">Events</a></li>
 						<li class="active"><a href="#fh5co-gallery">Gallery</a></li>
 						<li class="active"><a href="#fh5co-services">Highlights</a></li>
@@ -103,6 +104,38 @@
 			</div>
 		</div>
 	</header>
+
+
+
+	<!-- Invitation Section (between Home and Events) -->
+	<div id="fh5co-invitation" class="fh5co-invitation-section">
+		<!-- No visible section title as requested -->
+		<!-- Each page is a full-viewport panel with black background -->
+		<div class="invitation-page invitation-bg">
+			<img src="images/invitation/1.svg" alt="Invitation Page 1">
+		</div>
+		<div class="invitation-page invitation-bg">
+			<img src="images/invitation/2.svg" alt="Invitation Page 2">
+		</div>
+		<div class="invitation-page invitation-bg">
+			<img src="images/invitation/3.svg" alt="Invitation Page 3">
+		</div>
+		<div class="invitation-page invitation-bg">
+			<img src="images/invitation/4.svg" alt="Invitation Page 4">
+		</div>
+		<div class="invitation-page invitation-bg">
+			<img src="images/invitation/5.svg" alt="Invitation Page 5">
+		</div>
+		<div class="invitation-page invitation-bg">
+			<img src="images/invitation/6.svg" alt="Invitation Page 6">
+		</div>
+		<div class="invitation-page invitation-bg">
+			<img src="images/invitation/7.svg" alt="Invitation Page 7">
+		</div>
+		<div class="invitation-page invitation-bg">
+			<img src="images/invitation/8.svg" alt="Invitation Page 8">
+		</div>
+	</div>
 
 
 
