--- a/index.html
+++ b/index.html
@@ -30,16 +30,15 @@
 	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Engagement" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia+Sans+Condensed" rel="stylesheet">
-	
-	<!-- clock   -->
-	<link rel="stylesheet" href="css/responsive-clock.css">
+
+	<!-- Countdown styling -->
+	<link rel="stylesheet" href="css/countdown-style.css">
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="css/icomoon.css">
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.css'>
 	<!-- Magnific Popup -->
 	<link rel="stylesheet" href="css/magnific-popup.css">
 
@@ -97,9 +96,10 @@
 							<h2>23.11.2025</h2>
 							<br>
 							<h6 style="color: #fff; font-style: italic;">"Love is not an emotion, <br>but a deep and pure expression of the soul"<br>(Bhagavad Gita 2.64)</h6>
-							<div class="flipTimebox">
-								<div class="clock clock-fix"></div>
-							  </div>
+							<div class="countdown-container">
+								<script src="https://cdn.logwork.com/widget/countdown.js"></script>
+								<a href="https://logwork.com/countdown-timer" class="countdown-timer" data-timezone="Asia/Kolkata" data-date="2025-11-23 08:00">Wedding Countdown</a>
+							</div>
 							<p><a href="#fh5co-event" class="btn btn-default btn-sm">Save our date</a></p>
 						</div>
 					</div>
@@ -388,8 +388,6 @@
 
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
-    <!-- clock -->
-	<script src="js/clock.js"></script>
 	<!-- jQuery Easing -->
 	<script src="js/jquery.easing.1.3.js"></script>
 	<!-- Bootstrap -->
@@ -400,9 +398,6 @@
 	<script src="js/owl.carousel.min.js"></script>
 	<!-- countTo -->
 	<script src="js/jquery.countTo.js"></script>
-	<script src='https://momentjs.com/downloads/moment.js'></script>
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.14/moment-timezone-with-data-2012-2022.min.js'></script>
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.js'></script>
 	<!-- Stellar -->
 	<script src="js/jquery.stellar.min.js"></script>
 	<!-- Magnific Popup -->
@@ -410,7 +405,6 @@
 	<script src="js/magnific-popup-options.js"></script>
 
 	<!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.js"></script> -->
-	<script src="js/simplyCountdown.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
 	<center>View Source Code on <a href="https://github.com/shyamjos/wedding-website">GitHub <img src="images/github-logo.png"> </a> </center>
