updated font for quote

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							<img src="images/fprint.png" alt="Snehal + Karthik"> 
 							<h2>23.11.2025</h2>
 							<br>
-							<h6 style="color: #fff; font-style: italic;">"Love is not an emotion, <br>but a deep and pure expression of the soul"<br>(Bhagavad Gita 2.64)</h6>
+							<h6 style="color: #fff; font-family: Engagement; font-size: 20px; line-height: 1.5; font-weight: 300 !important;">"Love is not an emotion, <br>but a deep and pure expression of the soul"<br>(Bhagavad Gita 2.64)</h6>
 							<div class="countdown-container">
 								<script src="https://cdn.logwork.com/widget/countdown.js"></script>
 								<a href="https://logwork.com/countdown-timer" class="countdown-timer" data-timezone="Asia/Kolkata" data-date="2025-11-23 08:00">Wedding Countdown</a>
