fixed fonts for headers

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Snehal &amp; Karthik</h1>
+							<h2 class="hero-title">Snehal &amp; Karthik</h2>
 							<br>
 							<br>
 							<img src="images/fprint.png" alt="Snehal + Karthik"> 
-							<h2>23.11.2025</h2>
+							<h2 class="hero-date">23.11.2025</h2>
 							<br>
 							<h6 style="color: #fff; font-family: Engagement; font-size: 20px; line-height: 1.5; font-weight: 300 !important; margin-bottom: 10px;">"Love is not an emotion, <br>but a deep and pure expression of the soul"<br>(Bhagavad Gita 2.64)</h6>
 							<div class="countdown-container" style="margin-top: -20px;">
