--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
 								</div>
 							</div>
 							<div class="gallery-scroll-indicator" id="invitation-indicator">
-								<div class="gallery-indicator-dot active" data-index="0"></div>
-								<div class="gallery-indicator-dot" data-index="1"></div>
-								<div class="gallery-indicator-dot" data-index="2"></div>
-								<div class="gallery-indicator-dot" data-index="3"></div>
-								<div class="gallery-indicator-dot" data-index="4"></div>
-								<div class="gallery-indicator-dot" data-index="5"></div>
-								<div class="gallery-indicator-dot" data-index="6"></div>
-								<div class="gallery-indicator-dot" data-index="7"></div>
+								<div class="gallery-indicator-dot active" data-index="0" style="--dot-color: #2ecc71;"></div>
+								<div class="gallery-indicator-dot" data-index="1" style="--dot-color: #ff8c00;"></div>
+								<div class="gallery-indicator-dot" data-index="2" style="--dot-color: #ff69b4;"></div>
+								<div class="gallery-indicator-dot" data-index="3" style="--dot-color: #ffd700;"></div>
+								<div class="gallery-indicator-dot" data-index="4" style="--dot-color: #1e90ff;"></div>
+								<div class="gallery-indicator-dot" data-index="5" style="--dot-color: #fff4b2;"></div>
+								<div class="gallery-indicator-dot" data-index="6" style="--dot-color: #ff8c00;"></div>
+								<div class="gallery-indicator-dot" data-index="7" style="--dot-color: #ffffff;"></div>
 							</div>
 						</div>
 					</div>
